fixed bl div alignment

--- a/src/components/UserDash/BlacklistStyle.css
+++ b/src/components/UserDash/BlacklistStyle.css
@@ -1,6 +1,6 @@
 .display-cards-div {
    width: 75%;
-   margin-left: 15em;
+   margin-left: 21em;
 
 }
 
